# Cosmic-muon-Detector-simulation

./: .gitignore  CMakeLists.txt  README.md
include/: ActionInitialization.hh  AnalysisManager.hh  DetectorConstruction.hh  EventAction.hh  EventInformation.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  ScintillatorSD.hh  SiPMSD.hh
macros/: vis.mac
python/: analyze_data.py
src/: ActionInitialization.cc  AnalysisManager.cc  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  ScintillatorSD.cc  SiPMSD.cc  main.cc
